// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validators bridgeStatusValidator should throw for invalid response for complete bridge status with missing fields 1`] = `
Array [
  Array [
    "Bridge status validation failed",
    Object {
      "srcChain": "[across] Expected an object, but received: undefined",
    },
  ],
]
`;

exports[`validators bridgeStatusValidator should throw for invalid response for empty object 1`] = `
Array [
  Array [
    "Bridge status validation failed",
    Object {
      "srcChain": "[unknown] Expected an object, but received: undefined",
      "status": "[unknown] Expected one of \`\\"UNKNOWN\\",\\"FAILED\\",\\"PENDING\\",\\"COMPLETE\\"\`, but received: undefined",
    },
  ],
]
`;

exports[`validators bridgeStatusValidator should throw for invalid response for null 1`] = `
Array [
  Array [
    "Bridge status validation failed",
    Object {
      "unknown": "[unknown] Expected an object, but received: null",
    },
  ],
]
`;

exports[`validators bridgeStatusValidator should throw for invalid response for pending bridge status with missing fields 1`] = `
Array [
  Array [
    "Bridge status validation failed",
    Object {
      "destChain.chainId": "[across] Expected a string, but received: undefined",
    },
  ],
]
`;

exports[`validators bridgeStatusValidator should throw for invalid response for undefined 1`] = `
Array [
  Array [
    "Bridge status validation failed",
    Object {
      "unknown": "[unknown] Expected an object, but received: undefined",
    },
  ],
]
`;
